colang-cli/tests/samples/good/function_value_type_inference.co
fun foo(): [int] {
  []
}

fun main() {
  var arr = foo();
}
