colang-cli/tests/samples/compile_error/index_method_wrong_signature.co
struct foo {
  fun index(self, x: int): int {
    42
  }
}

fun main() {
  var x: foo;
  x[2];
}
